# kannada-tokenizer

./: .gitignore  README.md  pyproject.toml
src/kannada_tokenizer/: __init__.py  cli.py  sandhi.py  tokenizer.py  transliterate.py
tests/: test_sandhi.py  test_tokenizer.py  test_transliterate.py
